--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,10 @@ inputs:
   whats-new:
     description: "Text for the What's New section for English (U.S.)."
     required: false    
+  submit-for-review:
+    description: "Should submit for external testers"
+    required: false
+
 runs:
   using: 'node16'
   main: 'dist/index.js'
